--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <table>
                         <thead>
                             <tr>
-                                <th scope= "col">Column 0</th scope= "col"><th>Column 1</th>
+                                <th scope= "col">Column 0<th><th scope = "col">Column 1</th>
                             </tr>
                         </thead>
                         <tbody>
